force-app/main/default/objects/Action__c/fields/AccountAssessment__c.field-meta.xml
<CustomField>
    <fullName>AccountAssessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountAssessment</label>
    <referenceTo>AccountAssessmentRelation__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>