force-app/main/default/objects/Action__c/fields/Action_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_Description__c</fullName>
    <label>Action Item Description</label>
    <type>TextArea</type>
</CustomField>