force-app/main/default/objects/Action__c/fields/Action_Taken_on__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_on__c</fullName>
    <label>Action Taken on</label>
    <type>Date</type>
</CustomField>