force-app/main/default/objects/Action__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <formula>CreatedBy.FirstName + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>created</label>
    <type>Text</type>
</CustomField>