force-app/main/default/objects/Action__c/fields/Finding__c.field-meta.xml
<CustomField>
    <fullName>Finding__c</fullName>
    <label>Finding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>