force-app/main/default/objects/Action__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Issue_Incident__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>