force-app/main/default/objects/Action__c/fields/Location_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Injury__c</fullName>
    <label>Location of Injury</label>
    <type>TextArea</type>
</CustomField>