force-app/main/default/objects/Action__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>