force-app/main/default/objects/Action__c/fields/OwnershipName__c.field-meta.xml
<CustomField>
    <fullName>OwnershipName__c</fullName>
    <formula>Ownership__r.FirstName + &apos; &apos;+ Ownership__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnershipName</label>
    <type>Text</type>
</CustomField>