force-app/main/default/objects/Action__c/fields/Related_module__c.field-meta.xml
<CustomField>
    <fullName>Related_module__c</fullName>
    <label>Related module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assesments</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>