force-app/main/default/objects/Action__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Record</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>