force-app/main/default/objects/Action__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>