force-app/main/default/objects/Action__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>