force-app/main/default/objects/Action__c/validationRules/DueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDate</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; Today()  &amp;&amp; ISCHANGED(Due_Date__c)</errorConditionFormula>
    <errorMessage>Due date cannot be set to a past date</errorMessage>
</ValidationRule>